+expandable checkbox, bullet list, rich checkbox

--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -35,7 +35,7 @@ mixin footer(type)
                 .footer-block
                     h3 Подписка
                     p Получайте специальные предложения и новости сервиса
-                    form#submit-email
+                    form.submit-email
                         input(type="email", name="sub", placeholder='Email', required)
                         input(type="submit", value="arrow_forward")
             #lower
