--- a/src/blocks/form/elements.scss
+++ b/src/blocks/form/elements.scss
@@ -1,21 +1,3 @@
-#submit-email {
-    display: flex;
-    margin: 0;
-    height: 44px;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 4px;
-    padding: 0;
-    input {
-        border: none;
-        border-radius: 4px;
-        box-sizing: border-box;
-        height: 100%;
-        &:nth-child(1) {
-            margin-right: 2px;
-        }
-    }
-}
-
 input::placeholder {
     color: rgba(31, 32, 65, 0.25);
 }
@@ -53,14 +35,31 @@ input:hover, input:focus {
     flex-wrap: wrap;
 }
 
-.elem-col {
-    .guest-dropdown {
-        margin-bottom: 20px;
-    }
+#dropdowns > * {
     width: 320px;
-    input, select {
-        margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.submit-email {
+    display: flex;
+    margin: 0;
+    height: 44px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    padding: 0;
+    input {
+        border: none;
+        border-radius: 4px;
+        box-sizing: border-box;
+        height: 100%;
+        &:nth-child(1) {
+            margin-right: 2px;
+        }
     }
+}
+
+.elem-col {
+    width: 320px;
     p {
         font-size: 14px;
         display: inline-block;
@@ -80,6 +79,18 @@ input:hover, input:focus {
         }
         &.dark50 {
             text-align: right;
+        }
+    }
+    .dark50:nth-child(4) {
+        padding-right: 60px;
+    }
+    .submit-email {
+        width: 260px;
+    }
+    &:nth-child(1) h3.dark100 {
+        margin-top: 20px;
+        &:nth-child(1) {
+            margin-top: 0;
         }
     }
 }
@@ -120,7 +131,7 @@ input:hover, input:focus {
     width: 100px;
     color: #fff;
     padding: 0 20px;
-    &:disabled {
+    &:hover {
         opacity: 0.5;
     }
 }
@@ -138,7 +149,7 @@ input:hover, input:focus {
         border-radius: 20px;
         padding: 13px 1em;
     }
-    &:disabled {
+    &:hover {
         background: linear-gradient(180deg, #BC9CFF77 0%, #8BA4F977 100%);
     }
 }
@@ -198,7 +209,14 @@ button {
     border: none;
     font-family: 'montserrat', sans-serif;
     display: flex;
-    justify-content: space-between;
+    &::after {
+        content: '\e5c8';
+        font-family: 'material icons';
+        position: relative;
+        font-size: 24px;
+        color: #fff;
+        font-weight: normal;
+    }
     span {
         margin: 0 auto;
     }
@@ -243,6 +261,11 @@ button {
         height: 8px;
         transform: rotate(45deg);
     }
+    p {
+        margin: 5px 0 0 0;
+        font-size: 12px;
+        color: rgba(31, 32, 65, 0.5);
+    }
   }
 
 .checkmark {
@@ -262,7 +285,7 @@ button {
     }
 }
 
-#checkbox, #radio, #toggle, #likes, #rating, #pagination, #buttons {
+.checkbox, #radio, #toggle, #likes, #rating, #pagination, #buttons {
     margin-top: 16px;
     margin-bottom: 40px;
 }
@@ -394,6 +417,7 @@ button[class="like-btn"] {
 #review {
     display: flex;
     justify-content: space-between;
+    margin-top: 100px;
 }
 
 .features {
@@ -516,7 +540,7 @@ button[class="like-btn"] {
     }
 }
 
-.guest-dropdown {
+.guest-dropdown, .dropdown {
     width: 100%;
     position: relative;
     margin: 0;
@@ -543,7 +567,7 @@ button[class="like-btn"] {
         justify-content: space-between;
         align-items: center;
     }
-    .gdrop-content {
+    .gdrop-content, .drop-content {
         width: 100%;
         background: #fff;
         position: absolute;
@@ -598,6 +622,63 @@ button[class="like-btn"] {
         }
         .click-span-grey {
             visibility: hidden;
+        }
+    }
+}
+
+.dropdown {
+    width: 260px;
+    .drop-content p:nth-child(3) {
+        margin-bottom: 0;
+    }
+}
+
+.exp-checkbox {
+    h3 {
+        margin-bottom: 15px;
+        user-select: none;
+    }
+    i {
+        margin-left: 30px;
+        color: rgba(31, 32, 65, 0.5);
+        width: 44px;
+        text-align: center;
+        transition-duration: 250ms;
+    }
+    .exp-content {
+        display: none;
+    }
+}
+
+.rich-checkbox {
+    label {
+        margin-top: 16px;
+        font-weight: bold;
+        color: rgba(31, 32, 65, 0.75);
+    }
+}
+
+.bullet-list {
+    h3 {
+        margin-bottom: 16px;
+    }
+    li {
+        list-style: none;
+        color: rgba(31, 32, 65, 0.75);
+        font-weight: normal;
+        text-transform: none;
+        font-size: 14px;
+        line-height: 24px;
+        margin-bottom: 10px;
+        &::before {
+            content: '';
+            background: rgba(31, 32, 65, 0.25);
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 10px;
+            
         }
     }
 }
