--- a/src/blocks/head-foot/footer.pug
+++ b/src/blocks/head-foot/footer.pug
@@ -2,7 +2,7 @@ mixin footer(type)
     if (!type)
         footer.false
             #logo
-                img(src=require('./blocks/footer/logo.png').default alt='logo')
+                img(src='img/logo.png' alt='logo')
             p Copyright © 2018 Toxin отель. Все права зачищены.
             .contacts.fab
                 span.fa-twitter
@@ -13,7 +13,7 @@ mixin footer(type)
             #upper
                 .footer-block
                     #logo
-                        img(src=require('./blocks/footer/logo.png').default alt='logo')
+                        img(src='img/logo.png')
                     p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
                 .footer-list
                     h3 Навигация
