--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,4 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Landing Page
-    body
-        include ./blocks/header/header.pug
-        +header(false)
+extends layout
+block title
+    title Landing Page
+block content
