--- a/src/blocks/colors/colors.scss
+++ b/src/blocks/colors/colors.scss
@@ -45,11 +45,13 @@ $list: 1, 0.75, 0.5, 0.25, 0.05;
 h1 {
     font-size: 24px;
     line-height: 30px;
+    font-family: 'quicksand', 'open sans', sans-serif;
 }
 
 h2 {
     font-size: 19px;
     line-height: 24px;
+    font-family: 'quicksand', 'open sans', sans-serif;
 }
 
 h3 {
