--- a/src/blocks/form/datepicker.scss
+++ b/src/blocks/form/datepicker.scss
@@ -11,7 +11,7 @@
   line-height: 18px;
   font-family: 'montserrat', sans-serif;
   text-decoration: none;
-  background-image: url(./expand_more.png);
+  background-image: url(./img/expand_more.png);
   background-repeat: no-repeat;
   background-position: right;
   background-position-x: calc(100% - 11px);
@@ -43,6 +43,7 @@
     background: linear-gradient(180deg, #BC9CFF38 0%, #8BA4F938 100%);
     color: rgba(31, 32, 65, 0.5);
     border-radius: 0;
+
   }
   .next span, .prev span {
     font-family: 'Material Icons';
@@ -201,7 +202,6 @@
 
 .daterangepicker .calendar-table {
   border-radius: 4px;
-  background-color: #fff;
 }
 
 .daterangepicker .calendar-table table {
