--- a/src/blocks/head-foot/header.pug
+++ b/src/blocks/head-foot/header.pug
@@ -1,7 +1,7 @@
 mixin header(type)
     nav
         #logo
-            img(src=require('./blocks/header/logo.png').default alt="logo")
+            img(src='img/logo.png' alt="logo")
         #menu
             ul
                 li <b>О нас</b>
