--- a/src/blocks/cards/card-blocks.pug
+++ b/src/blocks/cards/card-blocks.pug
@@ -21,3 +21,80 @@ mixin room-thumb(number, cost, rate, reviews,luxe=false)
                             else
                                 i.material-icons star_border
                     p <b>#{reviews}</b> Отзывов
+
+mixin room-picker
+    .room-picker
+        h1 Найдём номера под ваши пожелания
+        .dates
+            .arrival
+                h3 Прибытие
+                +date-dropdown(true)
+            .departion
+                h3 Выезд
+                +date-dropdown(true)
+        h3 Гости
+        +dropdown(true)
+        +arrow-button('Подобрать номер')
+
+mixin booking(number, cost, luxe=false)
+    .booking
+        if (luxe)
+            h1 <i>№</i> #{number} 
+                span люкс
+            p <b>#{cost}₽</b> в сутки
+        else
+            h1 <i>№</i> #{number} 
+            p <b>#{cost}₽</b> в сутки
+        form
+            .dates
+                .arrival
+                    h3 Прибытие
+                    +date-dropdown(true)
+                .departion
+                    h3 Выезд
+                    +date-dropdown(true)
+            h3 Гости
+            +dropdown(true)
+            .cost-grid
+                p <span id='cost'></span> x <span id='days'></span> суток
+                p#sum
+                p Сбор за услуги: скидка 2 179₽
+                p <i>i</i>0₽
+                p Сбор за дополнительные услуги 
+                p <i>i</i>300₽
+            .cost-sum
+                h2 Итого
+                div
+                h2#final-cost
+            +arrow-button('забронировать', 'submit')
+
+mixin registration
+    .registration
+        h1 Регистрация аккаунта
+        form
+            input(type="text" name="firstname" placeholder='Имя' required)
+            input(type="text" name="lastname" placeholder='Фамилия' required)
+            +gender-pick
+            h3 дата рождения
+            input(type='text' placeholder='ДД.ММ.ГГГГ' spellcheck='false').masked-input.dark75
+            h3 данные для входа в сервис
+            input(type="email" placeholder='Email' required)
+            input(type="password" placeholder='Пароль' required)
+            +toggle
+            +arrow-button('Перейти к оплате', 'submit')
+        .reg-suggest
+            span Нет аккаунта на Toxin?
+            a(href="login.html")
+                +button('white', 'Создать')
+
+mixin login
+    .login
+        h1 Войти
+        form
+            input(type="email" placeholder='Email' required)
+            input(type="password" placeholder='Пароль' required)
+            +arrow-button('Войти', 'submit')
+        .reg-suggest
+            span Нет аккаунта на Toxin?
+            a(href="login.html")
+                +button('white', 'Создать')
