--- a/src/blocks/cards/cards.scss
+++ b/src/blocks/cards/cards.scss
@@ -21,6 +21,7 @@
     padding: 39px 29px 29px;
     h1 {
         margin: 0;
+        margin-bottom: 20px;
         padding: 0;
         i {
             font-size: 14px;
@@ -109,6 +110,7 @@
 .registration {
     h3 {
         margin-top: 20px;
+        margin-bottom: 5px;
     }
     input:not(.masked-input) {
         margin-bottom: 10px;
