--- a/src/blocks/cards/cards.scss
+++ b/src/blocks/cards/cards.scss
@@ -19,9 +19,9 @@
     border-radius: 4px;
     width: 380px;
     padding: 39px 29px 29px;
+    flex-shrink: 0;
     h1 {
         margin: 0;
-        margin-bottom: 20px;
         padding: 0;
         i {
             font-size: 14px;
@@ -127,6 +127,9 @@
     h3 {
         margin-top: 20px;
     }
+    a {
+        text-decoration: none;
+    }
 }
 
 .dates {
@@ -218,4 +221,11 @@
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
+}
+
+@media (max-width: 400px) {
+    .login, .room-picker, .registration, .booking {
+        flex-shrink: 1;
+        width: 100%;
+    }
 }
