--- a/src/blocks/colors/colors.scss
+++ b/src/blocks/colors/colors.scss
@@ -52,6 +52,7 @@ h2 {
     font-size: 19px;
     line-height: 24px;
     font-family: 'quicksand', 'open sans', sans-serif;
+    color: #1F2041;
 }
 
 h3 {
