--- a/src/blocks/head-foot/header.pug
+++ b/src/blocks/head-foot/header.pug
@@ -1,16 +1,25 @@
 mixin header(type)
     nav
         #logo
-            img(src='img/logo.png' alt="logo")
+            a(href="/")
+                img(src='img/logo.png' alt="logo")
         #menu
             ul
-                li <b>О нас</b>
+                li О нас
                 li Услуги
-                    span.material-icons keyboard_arrow_down
+                span.material-icons keyboard_arrow_down
                 li Вакансии
                 li Новости
                 li Соглашения
-                    span.material-icons keyboard_arrow_down
+                span.material-icons keyboard_arrow_down
+            .exp-menu Меню
+                span.material-icons keyboard_arrow_down
+                ul
+                    li О нас
+                    li Услуги
+                    li Вакансии
+                    li Новости
+                    li Соглашения
             if type
                 p Юлий Цезарь
             else
