--- a/src/uikit/cards.pug
+++ b/src/uikit/cards.pug
@@ -6,6 +6,7 @@ block title
 block header
 
 block content
+    img(src="vector.svg")
     #cards
         +room-picker
         +booking(888, 9990, true)
