--- a/src/uikit/colorstype.pug
+++ b/src/uikit/colorstype.pug
@@ -4,5 +4,6 @@ block title
     title Colors & Type
 block header
 block content
+    img(src="vector.svg")
     include ../blocks/colors/colors.pug
 block footer
