--- a/src/uikit/form-elements.pug
+++ b/src/uikit/form-elements.pug
@@ -4,6 +4,7 @@ block title
     title Form elements
 block header
 block content
+    img(src="vector.svg")
     #elements
         #inputs
             .elem-col
@@ -62,23 +63,10 @@ block content
             +list('bullet list')
         #review
             .features.dark75
-                div
-                    i.material-icons insert_emoticon
-                    b Комфорт
-                    p Шумопоглощающие стены
+                +room-feat('insert_emoticon', 'Комфорт', 'Шумопоглощающие стены')
                 hr
-                div
-                    i.material-icons location_city
-                    b Удобство
-                    p Окно в каждой из спален
+                +room-feat('location_city', 'Удобство', 'Окно в каждой из спален')
                 hr
-            .comments.dark75
-                img(src='img/avatar.png' alt='user avatar')
-                button.like-btn
-                    i.mi-icons favorite_border
-                    i.like-txt 11
-                b Мурад Сарафанов
-                span 5 дней назад
-                p Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
-
+            +comments('avatar', 11, 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+            
 block footer
