--- a/src/uikit/headers-footers.pug
+++ b/src/uikit/headers-footers.pug
@@ -4,6 +4,7 @@ block title
     title Headers & Footers
 block header
 block content
+    img(src="vector.svg")
     #headers-footers
         +header(false)
         +header(true)
