--- a/src/index.pug
+++ b/src/index.pug
@@ -2,3 +2,6 @@ extends layout
 block title
     title Landing Page
 block content
+    main
+        +room-picker
+        p Лучшие номера для вашей работы,<br>отдыха и просто вдохновения
