+ страница Search Room

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -5,6 +5,21 @@ include ./blocks/cards/card-blocks
 
 doctype html
 html(lang="ru")
+    - 
+        const roomArr = [
+            {number: 888, cost: 9990, rate: 5, reviews: 145, luxe: true},
+            {number: 840, cost: 9900, rate: 4, reviews: 65, luxe: false},
+            {number: 980, cost: 8500, rate: 3, reviews: 35, luxe: true},
+            {number: 856, cost: 7300, rate: 5, reviews: 19, luxe: false},
+            {number: 740, cost: 6000, rate: 4, reviews: 44, luxe: false},
+            {number: 982, cost: 5800, rate: 3, reviews: 56, luxe: false},
+            {number: 678, cost: 5500, rate: 5, reviews: 45, luxe: false},
+            {number: 450, cost: 5300, rate: 4, reviews: 39, luxe: false},
+            {number: 350, cost: 5000, rate: 3, reviews: 77, luxe: false},
+            {number: 666, cost: 5000, rate: 5, reviews: 25, luxe: false},
+            {number: 444, cost: 5000, rate: 3, reviews: 15, luxe: false},
+            {number: 352, cost: 5000, rate: 3, reviews: 55, luxe: false},
+        ]
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
